Add setting and support for using POST for set operations.

--- a/Client/Client/Settings.bundle/Root.plist
+++ b/Client/Client/Settings.bundle/Root.plist
@@ -90,6 +90,22 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Settings</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Use POST for set operations</string>
+			<key>Key</key>
+			<string>use_post_for_set_operations</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
 	</array>
 </dict>
 </plist>
