--- a/Client/Client/Settings.bundle/Root.plist
+++ b/Client/Client/Settings.bundle/Root.plist
@@ -94,7 +94,7 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
-			<string>Settings</string>
+			<string></string>
 		</dict>
 		<dict>
 			<key>Type</key>
