--- a/Client/Client/Settings.bundle/Root.plist
+++ b/Client/Client/Settings.bundle/Root.plist
@@ -26,7 +26,7 @@
 			<key>KeyboardType</key>
 			<string>Alphabet</string>
 			<key>AutocapitalizationType</key>
-			<string>None</string>
+			<string>Words</string>
 			<key>AutocorrectionType</key>
 			<string>No</string>
 		</dict>
@@ -68,7 +68,7 @@
 			<key>KeyboardType</key>
 			<string>Alphabet</string>
 			<key>AutocapitalizationType</key>
-			<string>None</string>
+			<string>Words</string>
 			<key>AutocorrectionType</key>
 			<string>No</string>
 		</dict>
