1) Add the ability to toggle on/off ping, traceroute, and latency tests 2) Add progress view for access test

--- a/Client/Client/Settings.bundle/Root.plist
+++ b/Client/Client/Settings.bundle/Root.plist
@@ -90,6 +90,42 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Tests</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Ping</string>
+			<key>Key</key>
+			<string>tests_ping</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Traceroute</string>
+			<key>Key</key>
+			<string>tests_traceroute</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Latency</string>
+			<key>Key</key>
+			<string>tests_latency</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
 	</array>
 </dict>
 </plist>
